# drawling

./: Cargo.toml  index.html  start_tailwind.zsh  start_trunk.zsh  tailwind.config.js  todo.md
src/: .lib.rs.rustfmt  lib.rs  main.rs
style/: out.css
