[package]
name = "drawling"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = "0.1.3"
console_log = "0.2"
log = "0.4"
console_error_panic_hook = "0.1.7"
serde = "1.0.152"
serde_json = "1.0.93"
# web-sys = "0.3.61"

[dependencies.web-sys]
version = "0.3"
features = ["CanvasRenderingContext2d"]
